=== Alexander-29 ===

=== Alexander-28 ===

2002-10-10  Darin Adler  <darin@apple.com>

	- fixed 3072643 -- infinite loop in JavaScript code at walgreens.com

	The problem is that "xxx".indexOf("", 1) needs to return 1, but we
	were returning 0.

        * kjs/ustring.cpp:
        (UString::find): Return pos, not 0, when the search string is empty.
        (UString::rfind): Make sure that pos is not past the end of the string,
	taking into account the search string; fixes a potential read off the end
	of the buffer. Also return pos, not 0, when the search string is empty.

=== Alexander-27 ===

2002-10-07  Darin Adler  <darin@apple.com>

	Fixed absurdly high memory usage when looking at pages that use a lot of JavaScript.

        * kjs/collector.cpp:
        (Collector::allocate): Implement a new policy of doing a garbage collect every 1000
	allocations. The old policy was both complicated and misguided.
        (Collector::collect): Zero out the "number of allocations since last collect".

2002-10-06  Darin Adler  <darin@apple.com>

	I noticed some broken lists at mapblast.com and tracked it down to this.

        * kjs/array_object.cpp:
        (ArrayInstanceImp::put): Don't truncate the list; only extend the length if
	it's not already long enough.
        (ArrayProtoFuncImp::call): Fix some ifdef'd code so it compiles if you turn
	the ifdefs on.

2002-10-04  Darin Adler  <darin@apple.com>

        Fixed problems parsing numbers that are larger than a long with parseInt.

        * kjs/config.h: Define HAVE_FUNC_STRTOLL.
        * kjs/function.cpp: (GlobalFuncImp::call):
	Change parseInt to use strtoll if available.

=== Alexander-26 ===

2002-09-27  Darin Adler  <darin@apple.com>

	- fixed 3033969 -- repro crash (infinite recursion in JavaScript)
	clicking on "screens" option at fsv.sf.net

        * kjs/object.h: Change recursion limit to 100 levels rather than 1000.

=== Alexander-25 ===

2002-09-26  Darin Adler  <darin@apple.com>
